HW1/Tests/output/t10.out
1 ID BLPDhZlOCd984iH1g8VIcx15RZPsvzeRD7WYpg2EARhHEwvUrZL0GZmKy4snWZ9S88fEjlFoddDo876rdAOf5JQ43KB
2 FALSE false
2 STRING noe	P			Y+	
~(	s
	v=
"
ERROR: Undefined escape sequence x01
